tests/baselines/reference/regexpExecAndMatchTypeUsages(strict=false).errors.txt
error TS5052: Option 'exactOptionalPropertyTypes' cannot be specified without specifying option 'strictNullChecks'.
regexpExecAndMatchTypeUsages.ts(4,17): error TS2551: Property 'index' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'. Did you mean 'indexOf'?
regexpExecAndMatchTypeUsages.ts(5,17): error TS2339: Property 'input' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'.
regexpExecAndMatchTypeUsages.ts(6,17): error TS2339: Property 'groups' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'.
regexpExecAndMatchTypeUsages.ts(7,17): error TS2339: Property 'groups' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'.
regexpExecAndMatchTypeUsages.ts(17,9): error TS2322: Type 'RegExpExecArray<CapturingGroupsArray, { [name: string]: string; }, RegExpFlags>' is not assignable to type 'RegExpMatchArray<CapturingGroupsArray>'.
regexpExecAndMatchTypeUsages.ts(20,9): error TS2322: Type 'RegExpMatchArray<CapturingGroupsArray>' is not assignable to type 'RegExpExecArray<CapturingGroupsArray, { [name: string]: string; }, RegExpFlags>'.
  Type '[string, ...string[]]' is not assignable to type '_RegExpExecArray<CapturingGroupsArray, { [name: string]: string; }>'.


!!! error TS5052: Option 'exactOptionalPropertyTypes' cannot be specified without specifying option 'strictNullChecks'.
==== regexpExecAndMatchTypeUsages.ts (6 errors) ====
    export function foo(matchResult: RegExpMatchArray, execResult: RegExpExecArray) {
        matchResult[0].length;
        matchResult[999].length;
        matchResult.index + 0;
                    ~~~~~
!!! error TS2551: Property 'index' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'. Did you mean 'indexOf'?
!!! related TS2728 lib.es5.d.ts:--:--: 'indexOf' is declared here.
        matchResult.input.length;
                    ~~~~~
!!! error TS2339: Property 'input' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'.
        matchResult.groups["someVariable"].length;
                    ~~~~~~
!!! error TS2339: Property 'groups' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'.
        matchResult.groups = undefined;
                    ~~~~~~
!!! error TS2339: Property 'groups' does not exist on type 'RegExpMatchArray<CapturingGroupsArray>'.
    
        execResult[0].length;
        execResult[999].length;
        execResult.index + 0;
        execResult.input.length;
        execResult.groups["someVariable"].length;
        execResult.groups = undefined;
    
        if (Math.random()) {
            matchResult = execResult;
            ~~~~~~~~~~~
!!! error TS2322: Type 'RegExpExecArray<CapturingGroupsArray, { [name: string]: string; }, RegExpFlags>' is not assignable to type 'RegExpMatchArray<CapturingGroupsArray>'.
        }
        else {
            execResult = matchResult
            ~~~~~~~~~~
!!! error TS2322: Type 'RegExpMatchArray<CapturingGroupsArray>' is not assignable to type 'RegExpExecArray<CapturingGroupsArray, { [name: string]: string; }, RegExpFlags>'.
!!! error TS2322:   Type '[string, ...string[]]' is not assignable to type '_RegExpExecArray<CapturingGroupsArray, { [name: string]: string; }>'.
        }
    }
    